--- a/src/lib/Slider/styles.css
+++ b/src/lib/Slider/styles.css
@@ -4,6 +4,7 @@
 
 [data-reach-slider-input] {
 	max-width: 100%;
+	user-select: none;
 }
 
 [data-reach-slider-input][data-orientation='horizontal'] {
@@ -27,6 +28,7 @@
 	position: relative;
 	border-radius: 0.25rem;
 	background: hsl(0, 0%, 95%);
+	user-select: none;
 }
 
 [data-reach-slider-track][data-orientation='horizontal'] {
@@ -88,6 +90,7 @@ target size of the track */
 	background: #1159a6;
 	left: 0;
 	bottom: 0;
+	user-select: none;
 }
 
 [data-reach-slider-range][data-orientation='horizontal'] {
@@ -101,6 +104,7 @@ target size of the track */
 [data-reach-slider-marker] {
 	background: hsl(0, 0%, 50%);
 	transform-origin: center;
+	user-select: none;
 }
 
 [data-reach-slider-marker][data-orientation='horizontal'] {
@@ -115,19 +119,6 @@ target size of the track */
 	transform: translate(-50%, -50%);
 	width: 0.75rem;
 	height: 3px;
-}
-
-/* [data-reach-slider-marker][data-state='at-value'],
-[data-reach-slider-marker][data-state='under-value'] {
-	
-} */
-
-/* TODO: Remove in 1.0 */
-[data-reach-slider-track-highlight] {
-	border-radius: inherit;
-	background: #1159a6;
-	left: 0;
-	bottom: 0;
 }
 
 [data-reach-slider-track-highlight][data-orientation='horizontal'] {
